--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "dependencies": {
     "flow-bin": "^0.63.1",
     "global": "^4.3.2",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0"
   },
   "scripts": {
-    "start": "NODE_PATH=src react-scripts start",
-    "build": "react-scripts build",
+    "build-css":
+      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "NODE_PATH=src react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "NODE_PATH=src react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow init": "flow init",
