--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
@@ -16,10 +17,10 @@
       "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css":
       "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "NODE_PATH=src react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "NODE_PATH=src react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "start-js": "react-scripts start",
+    "start": "NODE_PATH=src npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "NODE_PATH=src npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow init": "flow init",
